--- a/Gumdrop/Base.lproj/MainMenu.xib
+++ b/Gumdrop/Base.lproj/MainMenu.xib
@@ -11,7 +11,11 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <customObject id="Voe-Tx-rLC" customClass="AppDelegate"/>
+        <customObject id="Voe-Tx-rLC" customClass="AppDelegate">
+            <connections>
+                <outlet property="mainMenu" destination="T8K-F0-EHP" id="KWc-BC-yIS"/>
+            </connections>
+        </customObject>
         <customObject id="YLy-65-1bz" customClass="NSFontManager"/>
         <menu title="Main Menu" systemMenu="main" id="AYu-sK-qS6">
             <items>
@@ -672,5 +676,13 @@
                 <autoresizingMask key="autoresizingMask"/>
             </view>
         </window>
+        <menu id="T8K-F0-EHP">
+            <items>
+                <menuItem title="Hello World" id="bU5-VS-fNv">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                </menuItem>
+            </items>
+            <point key="canvasLocation" x="327" y="604.5"/>
+        </menu>
     </objects>
 </document>
