add connect to git button

--- a/Gumdrop/Base.lproj/MainMenu.xib
+++ b/Gumdrop/Base.lproj/MainMenu.xib
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6254" systemVersion="14B25" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES" customObjectInstantitationMethod="direct">
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="6185.11" systemVersion="13F34" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6254"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="6185.11"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="NSApplication">
@@ -670,6 +670,12 @@
         </menu>
         <menu id="T8K-F0-EHP">
             <items>
+                <menuItem title="Connect To Git" id="eyt-Dc-7qs">
+                    <modifierMask key="keyEquivalentModifierMask"/>
+                    <connections>
+                        <action selector="connectToGit:" target="Voe-Tx-rLC" id="GA1-Hj-GeC"/>
+                    </connections>
+                </menuItem>
                 <menuItem title="Connect To Trello" id="bU5-VS-fNv">
                     <modifierMask key="keyEquivalentModifierMask"/>
                     <connections>
